--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1424,7 +1424,7 @@ p {
     top: 0;
     height: 100%;
     width: 100%;
-	  background-image: url(../images/line.png); }
+	   }
   .best-creative-area .best-creative-bg .best-creative-content {
     padding-left: 80px;
     padding-top: 68px;
